git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/trunk@1978 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -76,7 +76,7 @@
   </build>
   <profiles>
     <profile>
-      <id>deployment-update</id>
+      <id>update</id>
       <build>
         <plugins>
           <plugin>
