git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/deploy@1982 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,19 @@
   <artifactId>rice-deploy</artifactId>
   <packaging>jar</packaging>
   <name>Rice Deploy</name>
+  <repositories>
+    <repository>
+      <id>kuali.nexus</id>
+      <name>Nexus Repository Manager</name>
+      <url>http://nexus.kuali.org/content/groups/public</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
   <properties>
     <maven.test.skip>true</maven.test.skip>
     <config.resource>${deploy.env}-app-config.xml</config.resource>
