git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/deploy@1983 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,7 @@
             <version>1.6</version>
             <executions>
               <execution>
-                <id>reset</id>
+                <id>run-ant</id>
                 <phase>install</phase>
                 <configuration>
                   <target>
