--- a/maven-deployer-plugin/pom.xml
+++ b/maven-deployer-plugin/pom.xml
@@ -1,24 +1,25 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.kuali</groupId>
     <artifactId>kuali-common</artifactId>
-    <version>15</version>
+    <version>18</version>
   </parent>
   <groupId>org.kuali.maven.plugins</groupId>
-  <artifactId>maven-http-plugin</artifactId>
-  <version>1.0.3-SNAPSHOT</version>
+  <artifactId>maven-deployer-plugin</artifactId>
+  <version>1.0.0-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
-  <name>Maven HTTP Plugin</name>
-  <description>Tools for allowing Maven to interact with the HTTP protocol</description>
+  <name>Maven Deployer Plugin</name>
+  <description>Tools for deploying Kuali applications</description>
   <properties>
     <kuali.slf4j.version>1.6.1</kuali.slf4j.version>
   </properties>
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-http-plugin</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-http-plugin</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/trunk/maven-http-plugin</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-deployer-plugin</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-deployer-plugin</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/trunk/maven-deployer-plugin</url>
   </scm>
   <dependencies>
     <dependency>
@@ -27,31 +28,9 @@
       <version>2.0.6</version>
     </dependency>
     <dependency>
-      <groupId>commons-beanutils</groupId>
-      <artifactId>commons-beanutils</artifactId>
-      <version>1.8.3</version>
-      <exclusions>
-        <exclusion>
-          <groupId>commons-logging</groupId>
-          <artifactId>commons-logging</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
       <version>2.6</version>
-    </dependency>
-    <dependency>
-      <groupId>commons-httpclient</groupId>
-      <artifactId>commons-httpclient</artifactId>
-      <version>3.1</version>
-      <exclusions>
-        <exclusion>
-          <groupId>commons-logging</groupId>
-          <artifactId>commons-logging</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
