--- a/maven-deployer-plugin/pom.xml
+++ b/maven-deployer-plugin/pom.xml
@@ -28,6 +28,11 @@
       <version>2.0.6</version>
     </dependency>
     <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-exec</artifactId>
+      <version>1.0.1</version>
+    </dependency>
+    <dependency>
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
       <version>2.6</version>
