git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/deploy-poc@1993 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.xml
+++ b/build.xml
@@ -1,16 +1,26 @@
 <project name="Application Deployer">
   <description>Deploy applications packaged by Maven to a server on EC2</description>
-  <property name="auth" value="${user.home}/kr-key.pem" />
-  <property name="mvn" value="mvn" />
+  <property name="private.key" value="kr-key.pem" />
+  <property name="deploy.auth" value="${user.home}/${private.key}" />
   <property name="impex.dba.username" value="master" />
   <property name="impex.dba.password" value="gw570229" />
 
   <target name="reset" depends="stop,clean,copy,resetdb,start" />
-  <target name="stop" depends="check-properties">
+  <target name="restart" depends="stop,clean,start" />
+  <target name="stop">
+    <condition property="stop.properties">
+      <and>
+        <isset property="deploy.server" />
+        <isset property="tomcat.instance" />
+      </and>
+    </condition>
+    <fail unless="stop.properties">
+      Properties not set correctly
+    </fail>
     <echo>Stopping ${tomcat.instance} on ${deploy.server}</echo>
     <exec executable="ssh">
       <arg value="-i" />
-      <arg value="${auth}" />
+      <arg value="${deploy.auth}" />
       <arg value="root@${deploy.server}" />
       <arg value="su" />
       <arg value="-" />
@@ -18,12 +28,21 @@
       <arg value="/usr/local/tomcat/bin/forced-shutdown.sh" />
     </exec>
   </target>
-  <target name="clean" depends="check-properties">
+  <target name="clean">
+    <condition property="clean.properties">
+      <and>
+        <isset property="deploy.server" />
+        <isset property="tomcat.instance" />
+      </and>
+    </condition>
+    <fail unless="clean.properties">
+      Properties not set correctly
+    </fail>
     <property name="old.root.dir" value="/usr/local/${tomcat.instance}/webapps/ROOT" />
     <echo>Removing ${old.root.dir}</echo>
     <exec executable="ssh" failonerror="true">
       <arg value="-i" />
-      <arg value="${auth}" />
+      <arg value="${deploy.auth}" />
       <arg value="root@${deploy.server}" />
       <arg value="rm" />
       <arg value="-rf" />
@@ -31,7 +50,7 @@
     </exec>
     <exec executable="ssh" failonerror="true">
       <arg value="-i" />
-      <arg value="${auth}" />
+      <arg value="${deploy.auth}" />
       <arg value="root@${deploy.server}" />
       <arg value="su" />
       <arg value="-" />
@@ -39,27 +58,54 @@
       <arg value="/usr/local/tomcat/bin/cleanup.sh" />
     </exec>
   </target>
-  <target name="copy" depends="check-properties">
+  <target name="copy">
+    <condition property="copy.properties">
+      <and>
+        <isset property="deploy.server" />
+        <isset property="tomcat.instance" />
+        <isset property="deploy.config" />
+        <isset property="deploy.war" />
+      </and>
+    </condition>
+    <fail unless="copy.properties">
+      Properties not set correctly
+    </fail>
     <property name="remote.config.file" value="/usr/local/${tomcat.instance}/conf/app-config.xml" />
     <echo>Copy ${config.file} to ${deploy.server}:${remote.config.file}</echo>
     <exec executable="scp" failonerror="true">
       <arg value="-i" />
-      <arg value="${auth}" />
-      <arg value="${config.file}" />
+      <arg value="${deploy.auth}" />
+      <arg value="${deploy.config}" />
       <arg value="root@${deploy.server}:${remote.config.file}" />
     </exec>
     <property name="remote.war.file" value="/usr/local/${tomcat.instance}/webapps/ROOT.war" />
     <echo>Copy ${war.file} to ${deploy.server}:${remote.war.file}</echo>
     <exec executable="scp" failonerror="true">
       <arg value="-i" />
-      <arg value="${auth}" />
-      <arg value="${war.file}" />
+      <arg value="${deploy.auth}" />
+      <arg value="${deploy.war}" />
       <arg value="root@${deploy.server}:${remote.war.file}" />
     </exec>
   </target>
-  <target name="resetdb" depends="check-properties">
+  <target name="resetdb">
+    <condition property="resetdb.properties">
+      <and>
+        <isset property="db.vendor" />
+        <isset property="impex.dir" />
+        <isset property="impex.database" />
+        <isset property="impex.url" />
+        <isset property="impex.username" />
+        <isset property="impex.password" />
+        <isset property="impex.dba.url" />
+        <isset property="impex.dba.username" />
+        <isset property="impex.dba.password" />
+      </and>
+    </condition>
+    <fail unless="resetdb.properties">
+      Properties not set correctly
+    </fail>
     <echo>Resetting ${db.instance} on ${impex.url}</echo>
-    <exec executable="${mvn}" dir="${impex.dir}" failonerror="true">
+    <exec executable="mvn" dir="${impex.dir}" failonerror="true">
       <arg value="clean" />
       <arg value="install" />
       <arg value="-Pdb,${db.vendor}" />
@@ -72,40 +118,25 @@
       <arg value="-Dimpex.database=${impex.database}" />
     </exec>
   </target>
-  <target name="start" depends="check-properties">
+  <target name="start">
+    <condition property="start.properties">
+      <and>
+        <isset property="deploy.server" />
+        <isset property="tomcat.instance" />
+      </and>
+    </condition>
+    <fail unless="start.properties">
+      Properties not set correctly
+    </fail>
     <echo>Start ${tomcat.instance} on ${deploy.server}</echo>
     <exec executable="ssh" failonerror="true">
       <arg value="-i" />
-      <arg value="${auth}" />
+      <arg value="${deploy.auth}" />
       <arg value="root@${deploy.server}" />
       <arg value="su" />
       <arg value="-" />
       <arg value="${tomcat.instance}" />
       <arg value="/usr/local/tomcat/bin/startup.sh" />
     </exec>
-  </target>
-  <target name="check-properties">
-    <condition property="properties.set">
-      <and>
-        <isset property="public.url" />
-        <isset property="deploy.server" />
-        <isset property="tomcat.instance" />
-        <isset property="db.instance" />
-        <isset property="db.vendor" />
-        <isset property="war.file" />
-        <isset property="config.file" />
-        <isset property="impex.dir" />
-        <isset property="impex.url" />
-        <isset property="impex.username" />
-        <isset property="impex.password" />
-        <isset property="impex.dba.url" />
-        <isset property="impex.dba.username" />
-        <isset property="impex.dba.password" />
-        <isset property="impex.database" />
-      </and>
-    </condition>
-    <fail unless="properties.set">
-      Properties not set correctly
-    </fail>
   </target>
 </project>
