git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/deploy-poc@1995 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/pom.xml
+++ b/pom.xml
@@ -162,11 +162,11 @@
             <version>1.6</version>
             <executions>
               <execution>
-                <id>reset</id>
+                <id>runant</id>
                 <phase>install</phase>
                 <configuration>
                   <target>
-                    <ant antfile="build.xml" target="reset" />
+                    <ant antfile="build.xml" target="${target}" />
                   </target>
                 </configuration>
                 <goals>
