git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/deploy-poc@1996 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
     <impex.mysql.dba.url>jdbc:mysql://mysql.rice.kuali.org</impex.mysql.dba.url>
     <impex.mysql.url>${impex.mysql.dba.url}/${impex.database}</impex.mysql.url>
     <deploy.app>sampleapp</deploy.app>
+    <target>reset</target>
   </properties>
   <build>
     <resources>
