--- a/build.xml
+++ b/build.xml
@@ -7,6 +7,7 @@
 
   <target name="reset" depends="stop,clean,copy,resetdb,start" />
   <target name="restart" depends="stop,clean,start" />
+  <target name="copywar" depends="stop,clean,copy,start" />
   <target name="stop">
     <condition property="stop.properties">
       <and>
