git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/deploy-poc@1999 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/pom.xml
+++ b/pom.xml
@@ -163,7 +163,7 @@
             <version>1.6</version>
             <executions>
               <execution>
-                <id>runant</id>
+                <id>antrun</id>
                 <phase>install</phase>
                 <configuration>
                   <target>
