git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/deploy-poc@2002 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.xml
+++ b/build.xml
@@ -106,6 +106,7 @@
       Properties not set correctly
     </fail>
     <echo>Resetting ${db.instance} on ${impex.url}</echo>
+    <echo>Impex directory ${impex.dir}</echo>
     <exec executable="mvn" dir="${impex.dir}" failonerror="true">
       <arg value="clean" />
       <arg value="install" />
