git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/deploy-poc@2005 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/pom.xml
+++ b/pom.xml
@@ -196,7 +196,7 @@
       </build>
     </profile>
     <profile>
-      <id>localwar</id>
+      <id>local</id>
       <properties>
         <deploy.war>../../${deploy.app}/target/rice-${deploy.app}-${project.version}.war</deploy.war>
         <impex.dir>../../db/impex/master</impex.dir>
