git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/deploy-poc@2006 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/pom.xml
+++ b/pom.xml
@@ -203,7 +203,7 @@
       </properties>
     </profile>
     <profile>
-      <id>getwar</id>
+      <id>download</id>
       <properties>
         <deploy.groupId>org.kuali.rice</deploy.groupId>
         <deploy.artifactId>rice-sampleapp</deploy.artifactId>
