git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2019 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/src/main/resources/bashrc.example
+++ b/ec2admin/src/main/resources/bashrc.example
@@ -24,5 +24,5 @@ CATALINA_OPTS="$CATALINA_OPTS -XX:+PrintTenuringDistribution"
 CATALINA_OPTS="$CATALINA_OPTS -Xloggc:$CATALINA_BASE/logs/heap.log"
 
 PATH=$JAVA_HOME/bin:$CATALINA_HOME/bin:$PATH
-export JAVA_HOME PATH CATALINA_HOME CATALINA_BASE CATALINA_OPTS
+export JAVA_HOME PATH CATALINA_HOME CATALINA_BASE CATALINA_OPTS ENVIRONMENT ALT_CONFIG_LOCATION
 
