git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2020 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/pom.xml
+++ b/ec2admin/pom.xml
@@ -18,6 +18,7 @@
     <artifactId>kuali-common</artifactId>
     <version>18</version>
   </parent>
+  <artifactId>org.kuali.ec2</artifactId>
   <artifactId>ec2-prep</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <name>EC2 Server Admin</name>
