--- a/ec2admin/pom.xml
+++ b/ec2admin/pom.xml
@@ -21,6 +21,7 @@
   <groupId>org.kuali.ec2</groupId>
   <artifactId>ec2-prep</artifactId>
   <version>1.0.0-SNAPSHOT</version>
+  <packaging>pom</packaging>
   <name>EC2 Server Admin</name>
   <description>Various tasks for administering an EC2 server</description>
   <repositories>
