git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2023 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/pom.xml
+++ b/ec2admin/pom.xml
@@ -49,6 +49,7 @@
           <artifactId>maven-antrun-plugin</artifactId>
           <version>1.6</version>
           <configuration>
+            <taskdef resource="net/sf/antcontrib/antcontrib.properties" classpathref="maven.plugin.classpath" />
             <target>
               <ant antfile="build.xml" target="${target}" />
             </target>
