--- a/ec2admin/pom.xml
+++ b/ec2admin/pom.xml
@@ -60,6 +60,11 @@
               <artifactId>ant-contrib</artifactId>
               <version>1.0b3</version>
             </dependency>
+            <dependency>
+              <groupId>ant</groupId>
+              <artifactId>ant</artifactId>
+              <version>1.7.0</version>
+            </dependency>
           </dependencies>
         </plugin>
       </plugins>
