--- a/ec2admin/pom.xml
+++ b/ec2admin/pom.xml
@@ -19,7 +19,7 @@
     <version>18</version>
   </parent>
   <groupId>org.kuali.ec2</groupId>
-  <artifactId>ec2-prep</artifactId>
+  <artifactId>ec2admin</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>EC2 Server Admin</name>
