git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2028 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/src/main/resources/bashrc.example
+++ b/ec2admin/src/main/resources/bashrc.example
@@ -8,7 +8,7 @@ fi
 # User specific aliases and functions
 
 ENVIRONMENT=ec2
-ALT_CONFIG_LOCATION=$USER/kuali/main/$ENVIRONMENT/env-config.xml
+ALT_CONFIG_LOCATION=$HOME/kuali/main/$ENVIRONMENT/env-config.xml
 JAVA_HOME=/usr/java/default
 CATALINA_HOME=/usr/local/tomcat
 CATALINA_BASE=/usr/local/$USER
