--- a/ec2admin/build.xml
+++ b/ec2admin/build.xml
@@ -43,6 +43,11 @@
       </filterset>
     </copy>
     <copy file="src/main/resources/rice.keystore" tofile="/home/${tomcat.user}/kuali/main/${environment}/rice.keystore" overwrite="true" />
+    <exec executable="chown">
+      <arg value="-R" />
+      <arg value="${tomcat.user}:tomcat" />
+      <arg value="/home/${tomcat.user}" />
+    </exec>
     <mkdir dir="${catalina.base}" />
     <mkdir dir="${catalina.base}/common" />
     <mkdir dir="${catalina.base}/logs" />
