--- a/ec2admin/pom.xml
+++ b/ec2admin/pom.xml
@@ -63,4 +63,11 @@
       </plugins>
     </pluginManagement>
   </build>
+  <dependencies>
+    <dependency>
+      <groupId>ant-contrib</groupId>
+      <artifactId>ant-contrib</artifactId>
+      <version>1.0b3</version>
+    </dependency>
+  </dependencies>
 </project>
