git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2039 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ec2admin/src/main/resources/bashrc.example
+++ b/ec2admin/src/main/resources/bashrc.example
@@ -8,11 +8,13 @@ fi
 # User specific aliases and functions
 
 ENVIRONMENT=${environment}
+ALT_CONFIG_LOCATION=$HOME/kuali/main/$ENVIRONMENT/env-config.xml
 JAVA_HOME=/usr/java/default
 CATALINA_HOME=/usr/local/tomcat
 CATALINA_BASE=/usr/local/$USER
 CATALINA_OPTS="-Xmx2g"
 CATALINA_OPTS="$CATALINA_OPTS -Denvironment=$ENVIRONMENT"
+CATALINA_OPTS="$CATALINA_OPTS -Dalt.config.location=$ALT_CONFIG_LOCATION"
 CATALINA_OPTS="$CATALINA_OPTS -XX:MaxPermSize=256m"
 CATALINA_OPTS="$CATALINA_OPTS -verbose:gc"
 CATALINA_OPTS="$CATALINA_OPTS -XX:+PrintGCDetails"
