--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -247,6 +247,8 @@
                     <requireProperty>
                       <property>deploy.version</property>
                       <message>You must provide a version to deploy</message>
+                      <regex>^\d+$</regex>
+                      <regexMessage>Version must being with a number</regexMessage>
                     </requireProperty>
                   </rules>
                   <fail>true</fail>
