git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/trunk@2048 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -248,7 +248,7 @@
                       <property>deploy.version</property>
                       <message>You must provide a version to deploy</message>
                       <regex>^\d+$</regex>
-                      <regexMessage>Version must being with a number</regexMessage>
+                      <regexMessage>Version must begin with a number</regexMessage>
                     </requireProperty>
                   </rules>
                   <fail>true</fail>
