git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/trunk@2050 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -248,7 +248,7 @@
                       <property>deploy.version</property>
                       <message>You must provide a version to deploy</message>
                       <regex>^[0-9][A-Z0-9.-_]+</regex>
-                      <regexMessage>Version must begin with a number</regexMessage>
+                      <regexMessage>Invalid version number</regexMessage>
                     </requireProperty>
                   </rules>
                   <fail>true</fail>
