--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -247,8 +247,8 @@
                     <requireProperty>
                       <property>deploy.version</property>
                       <message>You must provide a version to deploy</message>
-                      <regex>^[0-9][a-zA-Z0-9.-_]+</regex>
-                      <regexMessage>Invalid version number</regexMessage>
+                      <regex>^\d(.)*</regex>
+                      <regexMessage>Version must begin with a number</regexMessage>
                     </requireProperty>
                   </rules>
                   <fail>true</fail>
