git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2057 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/deploy-artifact/pom.xml
+++ b/deploy-artifact/pom.xml
@@ -35,7 +35,7 @@
             <groupId>${env.GROUP_ID}</groupId>
             <artifactId>${env.ARTIFACT_ID}</artifactId>
             <version>${env.VERSION}</version>
-            <file>${env.WORKSPACE}/upload.jar</file>
+            <file>${project.build.directory}/deploy/deploy.jar</file>
             <packaging>${env.PACKAGING}</packaging>
           </configuration>
         </plugin>
