--- a/deploy-artifact/pom.xml
+++ b/deploy-artifact/pom.xml
@@ -35,7 +35,7 @@
             <groupId>${env.GROUP_ID}</groupId>
             <artifactId>${env.ARTIFACT_ID}</artifactId>
             <version>${env.VERSION}</version>
-            <file>${project.build.directory}/deploy/deploy.jar</file>
+            <file>${project.build.directory}/deploy/deploy.file</file>
             <packaging>${env.PACKAGING}</packaging>
           </configuration>
         </plugin>
