git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2062 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/deploy-artifact/pom.xml
+++ b/deploy-artifact/pom.xml
@@ -95,7 +95,7 @@
               </execution>
               <execution>
                 <id>deploy-file-to-nexus2-private</id>
-                <phase>${deploy.phase}</phase>
+                <phase>${deployment.phase}</phase>
                 <goals>
                   <goal>deploy-file</goal>
                 </goals>
