--- a/maven-oracle-plugin/pom.xml
+++ b/maven-oracle-plugin/pom.xml
@@ -23,8 +23,13 @@
   <dependencies>
     <dependency>
       <groupId>org.apache.maven</groupId>
+      <artifactId>maven-core</artifactId>
+      <version>3.0.3</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven</groupId>
       <artifactId>maven-plugin-api</artifactId>
-      <version>2.0.6</version>
+      <version>3.0.3</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
