git-svn-id: https://svn.kuali.org/repos/foundation/trunk@2073 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/maven-oracle-plugin/pom.xml
+++ b/maven-oracle-plugin/pom.xml
@@ -20,6 +20,14 @@
     <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-oracle-plugin</developerConnection>
     <url>http://svn.kuali.org/repos/foundation/trunk/maven-oracle-plugin</url>
   </scm>
+  <build>
+    <testResources>
+      <testResource>
+        <directory>src/test/resources</directory>
+        <filtering>true</filtering>
+      </testResource>
+    </testResources>
+  </build>
   <dependencies>
     <dependency>
       <groupId>org.apache.maven</groupId>
